
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 OCT 24a
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - added code for N2VIBMODEL_RODRIGUEZ2026
  * in model/fluid/_Navier-Stokes_plasma/fluid.h
    - added constant N2VIBMODEL_RODRIGUEZ2026
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - added _tauvt_Macheret()
    - added _tauvt_Gnoffo()
    - in find_Svib(), implemented the Gnoff N2 vib model
    - added find_tauvt_d1overtauvt()
    - in find_dSvib_dU(), implemented the Gnoff N2 vib model
    
  
2025 OCT 20a
  * in model/share/transport_share.c
    - added _mueN_Ar() 
  * in model/thermo/_generic/electronimpact.c
    - added _EoverN_from_Te_Ar() and _Te_from_EoverN_Ar()


2025 OCT 17a
  * in model/thermo/_generic/enthalpy.c
    - added species Ar(4S), Ar(4P), Ar2+, Ar2star
  * in model/thermo/_generic/thermo.c
    - added species Ar(4S), Ar(4P), Ar2+, Ar2star to speciesname
    - in _ionizationpot(), added species Ar
  * in model/thermo/_generic/thermo.hh
    - added species Ar(4S), Ar(4P), Ar2+, Ar2star to SMAP
  * in model/thermo/_thermo.h
    - added species Ar(4S), Ar(4P), Ar2+, Ar2star 
  * in model/transport/_Dixon-Lewis/transport.c
    - added species Ar(4S), Ar(4P), Ar2+, Ar2star to Peps and Psig
    

2025 OCT 14a
  * in model/share/chem_share.c
    - added the function minlocal()
    - made various modifications within the dW functions to exclude the contributions to the Jacobian
      that are positive, to improve stability
      

2025 OCT 04a
  * in model/chem/*/chem.hh
    - deleted all the #define CHEM_NEUTRAL
  * in model/emfield/*/emfield.c
    - got rid of the code that was executed when CHEM_NEUTRAL was TRUE
  * in model/fluid/*plasma*/fluid.c
    - added the function double _Nk()